Fixed text shifting when deselecting a flyer

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,9 @@ video {
 			white-space: normal;
 			padding-bottom: 84px;
 			scrollbar-width: thin;
+			scrollbar-width: none;  /* Firefox */
+			-ms-overflow-style: none;  /* IE 10+ */
+			&::-webkit-scrollbar { display: none; }  /* Chrome, Safari */
 		}
 		& .enabled { &:hover { opacity: 0.48; } }
 		& .disabled {
